--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
-    <string name="app_name">BollywoodBollywood</string>
+    <string name="app_name">Bollywood Bollywood</string>
 
-    <string name="action_settings">Settings</string>
-
-    <string name="hello_world">Hello world!</string>
     <!-- -
         This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
@@ -15,5 +12,6 @@
     <string name="b_medium">MEDIUM</string>
     <string name="b_difficult">DIFFICULT</string>
     <string name="b_very_difficult">VERY DIFFICULT</string>
+    <string name="b_play">PLAY</string>
 
 </resources>
