--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,7 @@
         This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
-    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-
-    <string name="select_level">Select Level:</string>
-    <string name="b_easy">EASY</string>
-    <string name="b_medium">MEDIUM</string>
-    <string name="b_difficult">DIFFICULT</string>
-    <string name="b_very_difficult">VERY DIFFICULT</string>
-    <string name="b_play">PLAY</string>
+    <string name="banner_ad_unit_id">ca-app-pub-5152778234781012/9085967393</string>
+    <string name="rewarded_ad">ca-app-pub-5152778234781012/4863168195</string>
 
 </resources>
